--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/mateocif/public_html/
-    - npm run build
-    - /bin/cp dist $DEPLOYPATH
+    - /bin/cp index.html $DEPLOYPATH
