--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,4 +2,4 @@
 deployment:
   tasks:
     - export DEPLOYPATH=/home/mateocif/public_html/
-    - /bin/cp index.html $DEPLOYPATH
+    - /bin/cp -R dist $DEPLOYPATH
