--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "private": true,
-  "homepage": "https://mateeb11.github.io/portfolio",
+  "homepage": "https://mateeb.com",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
